--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": ">=4.0",
-        "symfony/http-foundation": ">=2.3"
+        "illuminate/support": "~4.0",
+        "symfony/http-foundation": "~2.3"
     },
     "autoload": {
         "classmap": [
